# SkillFlow

./: .env.example  .gitignore  .secrets.baseline  README.md  TASK.md  pyproject.toml
example/: app.py  bot.py  config.py
example/handlers/: __init__.py  call_backs.py  commands.py  messages.py  start_menu.py
example/handlers/modes/: dialog_with_ai.py  pronunciation_check.py  translate_practice.py
example/keyboards/: inline_keyboard.py
example/models/: recognize.py
example/models/path_to_save_model/: config.json
example/states/: user.py
example/utils/: ai_assistant.py  config_parser.py  pronunciation_manager.py  translation_manager.py
tests/: test_deepseek.py  test_g4f.py  test_pipeline.py  test_speechbrain.py  test_whisper.py  text_to_speech.py
