[project]
name = "skillflow"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
authors = [
  {name = "dimflix", email = "dimflix.official@gmail.com"},
  {name = "sweepyd1", email = "dima10yashin@gmail.com"},
  {name = "vasilisqq", email = "ertybasevk@gmail.com"},
  {name = "AsDo001", email = "arsdon2006@gmail.com"},
]

keywords = ["skills", "courses", "python", "uv"]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "aiogram>=3.18.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "transformers>=4.49.0",
]

[project.urls]
Homepage = "https://github.com/DIMFLIX-OFFICIAL/SkillFlow"
Documentation = "https://github.com/DIMFLIX-OFFICIAL/SkillFlow/wiki"
Repository = "https://github.com/DIMFLIX-OFFICIAL/SkillFlow.git"
"Bug Tracker" = "https://github.com/DIMFLIX-OFFICIAL/SkillFlow/issues"
Changelog = "https://github.com/DIMFLIX-OFFICIAL/SkillFlow/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
pythonpath = "example"

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B404", "B603"]
tests = ["B102", "B101", "B301"]
